I think I fixed everything

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -40,7 +40,7 @@
   background-image: url('../assets/slides/canvas.jpg');
   background-size: cover;
   background-position: 50% 50%;
-  
+
   &::before {
     background: rgba(255, 255, 255, 0.55);
     content: ' ';
@@ -59,8 +59,9 @@
     position: relative;
   }
 }
-    
+
 .slide-content{
+  width: 100%;
   z-index: 5;
 }
 
@@ -77,11 +78,11 @@
   width: auto;
   z-index: -1;
 }
-    
+
 .tabs {
   color: $accent-color;
   overflow: auto;
-  
+
   .tab,
   .download a {
     border: solid 1px $accent-color;
@@ -90,12 +91,12 @@
     float: left;
     font-size: 0.875rem;
     padding: 0 0.5rem;
-    
+
     &:first-child {
       border-left: solid 1px $accent-color;
     }
   }
-  
+
   .tab.selected {
     border: solid 1px $text-color;
     border-left: 0;
@@ -103,41 +104,41 @@
     color: $text-color;
     cursor: default;
   }
-  
+
   .tab:last-child.selected,
   .tab[data-id='tab-3'].selected {
     border-right: solid 1px $text-color;
   }
-  
+
   .tab:first-child.selected {
     border-left: solid 1px $text-color;
   }
-  
+
   .download a {
     background: $accent-color;
     color: white;
     display: block;
     margin-left: 0.625rem;
-    
+
     @include media-query($on-laptop) {
       margin-left: 0;
     }
   }
-  
+
   .tab,
   .download a {
     &:hover {
       background: $accent-color-50;
       color: white;
     }
-    
+
     &.selected:hover {
       background: transparent;
       color: $text-color;
     }
   }
 }
-    
+
 header .tabs {
   .tab {
     font-size: 0.75rem;
@@ -148,13 +149,13 @@ header .tabs {
 .tab-content {
   .tab {
     display: none;
-    
+
     &.selected {
       display: block;
     }
   }
 }
-    
+
 .dropcap {
   border: 1px solid;
   float: left;
@@ -164,7 +165,7 @@ header .tabs {
   margin-right: 8px;
   padding: 0.1em 0.25em;
 }
-    
+
 .photo-caption {
   align-self: flex-start;
   border-radius: 9999px;
@@ -175,7 +176,7 @@ header .tabs {
   order: 1;
   padding: 0.5em;
   transition: color 0.5s ease-in, background-color 0.5s ease-in;
-  
+
   &::before {
     border: 1px solid;
     border-radius: 50%;
@@ -187,13 +188,13 @@ header .tabs {
     padding: 0.3em;
     transition: color 0.5s ease-in;
   }
-  
+
   &:hover {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 9999px;
     color: $grey-color;
     transition: color 0.5s ease-out, background-color 0.5s ease-out;
-    
+
     p::before {
       color: $grey-color;
       transition: color 0.5s ease-out;
@@ -203,7 +204,7 @@ header .tabs {
     }
   }
 }
-    
+
 .no-opacity {
   opacity: 0;
 }
@@ -211,7 +212,7 @@ header .tabs {
 p {
   padding-bottom: 1rem;
 }
-    
+
 //Cover Slide
 
 .landing,
@@ -219,43 +220,43 @@ p {
   overflow: hidden;
   position: relative;
 }
-    
+
 .standard-slide {
-  
+
   h1 {
     font-weight: 400;
     padding: 0.5rem 0;
   }
-  
+
   h3 {
     font-size: 1rem;
     text-transform: uppercase;
   }
-  
+
   a {
     color: $accent-color;
     text-decoration: none;
-    
+
     &:hover {
       color: $accent-color-50;
     }
   }
-  
+
   .lightbox-link {
     color: $accent-color;
   }
-  
+
   .fa {
     margin-right: 0.5rem;
   }
-  
+
   .fa-play {
     border: solid 1px $accent-color;
     font-size: 0.55rem;
     padding: 0.125rem;
     padding-left: 0.2rem;
   }
-  
+
   .book-cover {
     float: left;
     margin-right: 2rem;
@@ -279,28 +280,28 @@ p {
     font-size: 13px;
   }
 }
-    
+
 .joint-message,
 .financials,
 .gallery-slide{
   .wrapper{
     padding-top: 6rem;
   }
-  
+
   h3 {
     display: none;
   }
-  
+
   .tabs {
     .tab.selected {
       background: $grey-color;
       color: white;
     }
   }
-  @include media-query($small-screen) {		
-    h1 {		
-      display: none;		
-    }		
+  @include media-query($small-screen) {
+    h1 {
+      display: none;
+    }
   }
   @include media-query($small-phone) {
     .wrapper{
@@ -320,7 +321,7 @@ p {
   opacity: 0;
   transition: opacity 0.5s ease-in;
 }
-    
+
 // Landing Page
 
 header.white {
@@ -328,7 +329,7 @@ header.white {
   .fa {
     color: white;
   }
-  
+
   .tab, .tab.selected{
     border: solid 1px white;
     color: white;
@@ -344,7 +345,7 @@ header.white {
     cursor: pointer;
     color: white;
   }
-  
+
   img {
     filter: invert(100%) brightness(20);
   }
@@ -358,93 +359,93 @@ header.white {
       font-size: 16px;
     }
   }
-  
+
   .wrapper {
     position: relative;
     z-index: 5;
   }
   color: white;
-  
+
   .content-wrapper {
     box-sizing: content-box;
     width: 80%;
   }
-  
+
   h1 {display: none;}
-  
+
   .title,
   .content-text {
     display: table-cell;
     vertical-align: bottom;
   }
-  
+
   .title {
     width: 40%;
   }
-  
+
   .content-text {
     padding-bottom: 0.5rem;
     padding-left: 4rem;
   }
-  
+
   .intro {
     p {
       margin-left: -2rem;
       width: 95%;
     }
   }
-  
+
   .nav {
     > div {
       float: left;
     }
-    
+
     .link {
       border-top: solid 1px white;
       float: left;
       font-weight: 500;
       padding-top: 0.3rem;
       text-transform: uppercase;
-      
+
       &:hover {
         color: $grey-color;
       }
     }
-    
+
     .explore,
     .view-ar {
       position: relative;
     }
-    
+
     .explore .link {
       border-right: solid 1px white;
     }
-    
+
     .up,
     .down {
       position: absolute;
     }
-    
+
     .up {
       left: -2rem;
     }
-    
+
     .down {
       right: -1rem;
     }
-    
+
     .fa {
       display: block;
       font-size: 1.75rem;
       line-height: 1rem;
       margin-top: 5px;
     }
-    
+
     .arrows {
       height: 25px;
       position: relative;
     }
-    
+
     .arrow {
       color: white;
       opacity: 1;
@@ -452,40 +453,40 @@ header.white {
       top: 0;
       transform-origin: 0%;
     }
-    
+
     .down {
       .arrow-1 {
         animation: arrow-down 2.5s ease-in-out infinite;
       }
-      
+
       .arrow-2 {
         animation: arrow-down 2.5s 1.25s ease-in-out infinite;
       }
     }
-    
+
     .up {
       .arrow-1 {
         animation: arrow-up 2.5s ease-in-out infinite;
       }
-      
+
       .arrow-2 {
         animation: arrow-up 2.5s 1.25s ease-in-out infinite;
       }
     }
-    
+
     @keyframes arrow-up {
       0% {
         opacity: 0;
       }
-      
+
       30% {
         opacity: 1;
       }
-      
+
       50% {
         top: -45%;
       }
-      
+
       100% {
         opacity: 0;
       }
@@ -494,37 +495,37 @@ header.white {
       0% {
         opacity: 0;
       }
-      
+
       30% {
         opacity: 1;
       }
-      
+
       50% {
         top: 45%;
       }
-      
+
       100% {
         opacity: 0;
       }
     }
   }
-  
+
   @include media-query($on-laptop) {
-    
+
     .content {
       margin: 0 2rem;
     }
-    
+
     .intro,
     .title {
       float: none;
     }
-    
+
     .nav {
       left: auto;
       position: relative;
     }
-    
+
     .content-wrapper {
       padding-top: 3rem;
       width: 100%;
@@ -535,38 +536,38 @@ header.white {
     .landing-content {
       display: block;
     }
-    
+
     .title {
       display: block;
       margin: auto;
       width: 75%;
     }
-    
+
     img {
       width: 100%;
     }
-    
+
     .content {
       margin: 4rem 0 0;
     }
-    
+
     .content-text {
       padding-left: 5rem;
     }
   }
 }
-    
+
 //Financials Slide
 .financials {
   h1 {
     margin-bottom: 1rem;
   }
-  
+
   .small {
     font-size: 0.75rem;
     text-align: right;
   }
-  
+
   table {
     float: left;
     font-size: 0.875rem;
@@ -579,15 +580,15 @@ header.white {
       float: none;
       width: 100%;
     }
-    
+
     td:nth-child(1) {
       width: 60%;
     }
-    
+
     td:nth-child(2), td:nth-child(3) {
       width: 20%;
     }
-    
+
     thead {
       .title {
         td {
@@ -599,31 +600,31 @@ header.white {
         }
         font-weight: 900;
       }
-      
+
       td {
         text-align: center;
-        
+
         &:nth-child(1) {
           border-right: solid 0.5rem $default-background-color;
         }
-        
+
       }
     }
-    
+
     tbody {
       border-top: solid 1rem transparent;
       line-height: 100%;
-      
+
       td {
         &:nth-child(1) {
           padding-left: 1.5rem;
           text-align: left;
         }
-        
+
         &:nth-child(2), &:nth-child(3) {
           padding-right: 1rem;
           text-align: right;
-          
+
         }
       }
       .section {
@@ -632,22 +633,22 @@ header.white {
           padding-left: 0.5rem;
         }
       }
-      
+
       .total {
         td:nth-child(2), td:nth-child(3) {
           font-weight: 900;
         }
       }
-      
+
       .double {
         border-bottom: double rgb(156, 156, 156);
       }
-      
+
       .single {
         border-bottom: solid 1px rgb(156, 156, 156);
         border-top: solid 1px rgb(156, 156, 156);
       }
-      
+
       .top {
         border-top: solid 1px rgb(156, 156, 156);
       }
