add style for background image to be right aligned where necessary update slide 16 to use same background styling as the rest of the slides

--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -1,5 +1,5 @@
 <section class="vh-100-ns standard-slide slide-15">
-  <div class="background-img" style="background-image: url('assets/slides/T20-background.jpg')"></div>
+  <div class="background-img right-img" style="background-image: url('assets/slides/T20-background.jpg')"></div>
 
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
