--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,5 +1,6 @@
-<section class="vh-100-ns financials standard-slide slide-16">
-    <div class="wrapper h-100">
+<section class="vh-100-ns standard-slide financials" id="slide-16">
+    <div class="background-img" style="background-image: url('assets/slides/canvas.jpg')"></div>
+    <div class="wrapper h-100 flex">
           <div class="slide-content pb4-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
@@ -14,8 +15,6 @@
                     <h3>Financial Report</h3>
                     <h1>Financials</h1>  
                     <div class="col">
-                           
-                                 
                         {% include slide16-auditor.html %}
                     </div>
                 </div>
@@ -39,4 +38,5 @@
             </div>
         </div>
     </div>
+    
 </section>
