--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -1,4 +1,4 @@
-<h1 class="mobile-only">Balance Sheet</h1>
+<div class="mobile-only mobile-subheading">Balance Sheet</div>
 <table class="balance-sheet table1">
     <thead>
         <tr class="title">
