--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -1,4 +1,4 @@
-<h1 class="mobile-only">Revenue and Expenses</h1>
+<div class="mobile-only mobile-subheading">Revenue and Expenses</div>
 <table class="balance-sheet table2">
     <thead> 
         <tr class="title">
