--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="tab" data-id="tab-4">
 
-                    <h1 class="mobile-only">Notes</h1>
+                    <div class="mobile-only mobile-subheading">Notes</div>
                     <h4 class="no-mobile">Notes</h4>
                     <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
                     <p>The Operating and Capital Funds account for the Organization’s program delivery, administrative activities, and non-campus related capital assets.</p>
