--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -35,9 +35,10 @@
                         </div>
                         <div class="photo-caption no-mobile">Photo of Rohinton P. Medhora</div>
                     </div>
+                    <div class="mobile-only"><hr></div>
                     <div class="tab" data-id="tab-2" data-name="chairs-message">
                         <h3>Messages</h3>
-                        <h1>Chair's Message</h1>
+                        <h1 id="chairs-message">Chair's Message</h1>
                         
                         <div class="col">
                             
