--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,21 +12,37 @@ layout: compress
       {% include timeline.html %}
       {% include home.html %}
       {% include slide2.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide3.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide4.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide5.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide6.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide7.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide8.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide9.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide10.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide11.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide12.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide13.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide14.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide15.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide16.html %}
+      <div class="mobile-only"><hr></div>
       {% include gallery.html %}
+      <div class="mobile-only"><hr></div>
       {% include slide17.html %}
       {% include mobile-button.html %}
 
