--- a/_includes/slide16-auditor.html
+++ b/_includes/slide16-auditor.html
@@ -1,4 +1,4 @@
-<h1 class="mobile-only">Auditor's Report</h1>
+<div class="mobile-only mobile-subheading">Auditor's Report</div>
 <p><strong>Report of the Independent Auditors on the Summary Financial Statements</strong><br>
 To the Directors of The Centre for International Governance Innovation,</p>
 <p>The accompanying summary financial statements, which comprise the summary balance sheet as at July 31, 2017 and the summary statement of revenue, expenses and changes in fund balances for the year then ended, and related notes, are derived from the financial statements of The Centre for International Governance Innovation (the “Organization”) as at, and for the year ended, July 31, 2017. We expressed an unmodified audit opinion on those financial statements in our report dated December 1, 2017. Those financial statements, and the summary financial statements, do not reflect the effects of events that occurred subsequent to the date of our report on those financial statements.</p>
