adding optimized images, fix a couple of gallery images

--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -7,7 +7,7 @@
       
       <h3>Opinion</h3>
       <h1>Modernizing NAFTA</h1>
-      <div class="mobile-img"><img src="assets/slides/nafta.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
+      <div class="mobile-img"><img src="assets/slides/nafta-pre.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
       
       <div class="photo-caption">NAFTA signing at the White House (Associated Press)</div>
       
