--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -6,7 +6,7 @@
         <h3>Expertise</h3>
         <h1>IMF Meetings: Focal Point for the Global Economy</h1>
 
-        <div class="mobile-img"><img src="assets/slides/IMF.jpg" alt="attendants at IMF meeting"></div>
+        <div class="mobile-img"><img src="assets/slides/IMF-pre.jpg" alt="attendants at IMF meeting"></div>
 
         <div class="photo-caption">Christine Lagarde, managing director of the IMF (Associated Press)</div>
 
