--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,10 +1,10 @@
 <section class="vh-100-ns standard-slide slide-17">
-  <div class="background-img" style="background-image: url('assets/slides/2017 CIGI Staff Photo - Setup 2 - FInal OPTIMIZED.jpg')"></div>
+  <div class="background-img" style="background-image: url('assets/slides/2017-CIGI-Staff-Photo.jpg')"></div>
   
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       <h1>Thank You</h1>
-      <div class="mobile-img"><img src="assets/slides/2017 CIGI Staff Photo - Setup 2 - FInal OPTIMIZED.jpg" alt="Staff Photo 2017"></div>
+      <div class="mobile-img"><img src="assets/slides/2017-CIGI-Staff-Photo-pre.jpg" alt="Staff Photo 2017"></div>
       
       <div class="photo-caption">CIGI Staff Photo</div>
       
