--- a/_includes/slide5.html
+++ b/_includes/slide5.html
@@ -6,7 +6,7 @@
         
         <h3>Research</h3>
         <h1>A New Legal Framework for Indigenous Rights</h1>
-        <div class="mobile-img"><img src="assets/slides/UNDRIP.jpg" alt="Indigeneous painting of forest"></div>
+        <div class="mobile-img"><img src="assets/slides/UNDRIP-pre.jpg" alt="Indigeneous painting of forest"></div>
 
         <div class="photo-caption">
           <em>Natives Playing on the Land</em> (Lawrence Paul Yuxweluptun)
