--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -86,8 +86,8 @@ body {
   @include media-query($small-screen) {
     font-size: 14px;
   }
-  @include media-query($medium-screen) {
-    font-size: 17px;
+  @media (min-width:$medium-screen) {
+    font-size: 16px;
   }
 }
 
@@ -110,7 +110,7 @@ h1 {
   @include media-query($on-palm) {
     font-size: 1.25rem;
   }
-  @include media-query($medium-screen) {
+  @media (min-width:$medium-screen) {
     font-size: 2em;
   }
 }
@@ -121,7 +121,7 @@ h1 {
 h2 {
   font-size: 1em;
   font-weight: 300;
-  @include media-query($medium-screen) {
+  @media (min-width:$medium-screen) {
     font-size: 1.25em;
   }
 }
