--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -166,7 +166,21 @@ $tooltip-background: rgba(60, 60, 60, 0.9);
 
 .cigi-logo-desktop {
   width: 10rem;
+  @media (min-width:$medium-screen) {
+    width: 12rem;
+  }
 }
 .toc-flex-item {
   flex: 1 1 auto;
+}
+
+.bg-black-90 {
+  @media (min-width:$medium-screen) {
+    .f4 {
+      font-size: 1.5rem;
+    }
+    .f6 {
+      font-size: 1rem;
+    }
+  }
 }
