--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -80,6 +80,17 @@
     opacity: 1;
     pointer-events: unset;
   }
+
+  .caption{
+    font-weight: 500;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 0.2rem 0.7rem;
+    border-top: solid 1px rgba(255, 255, 255, 0.85);
+  }
+  .photo{
+    display: block;
+  }
 }
 
 .media-container {
@@ -88,13 +99,13 @@
   top: 50%;
   transform: translate(-50%, -50%);
   transition: transform 1s ease;
-  // max-width: calc(100% - 2rem);
+  @media (max-width: $small-screen){
+    width: calc(60% - 2rem);
+  }
+  @media (max-width: $on-laptop){
+    width: calc(80% - 2rem);
+  }
 }
-
-// .photo {
-//   max-height: 75vh;
-//   max-width: 75vw;
-// }
 
 .close-button {
   align-items: center;
@@ -119,8 +130,11 @@
   color: #fff;
   height: 2.25rem;
   position: absolute;
-  top: 50%;
+  top: 45%;
   width: 2.25rem;
+  @media(max-width: $small-phone){
+    top: 40%;
+  }
 }
 
 .gallery-left {
@@ -146,11 +160,6 @@
     padding-left: 3px;
   }
 }
-
-// .loading {
-//   background: rgba(0, 0, 0, 0.5);
-//   z-index: 1;
-// }
 
 .spinner {
   animation: rotate 1s linear infinite;
