made messages font smaller to fit on 800x600, removed width requirement for 2 column

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -673,3 +673,9 @@ header.white {
     }
   }
 }
+
+.messages {
+  @media (max-width:$on-laptop) and (min-width: $small-phone){
+    font-size: 12px;
+  }
+}
