making better use of existing classes

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -11,7 +11,7 @@
                     <h3>Messages</h3>
                     <h1>President’s Message</h1>
                     
-                    <div class="col messages">
+                    <div class="col">
                         
                         <p>Beginning in Bretton Woods in 1944, groups of powerful nations organized the economic and political arrangements that serve us, albeit imperfectly, to this day. But rapid developments in technologies are upending established structures in every part of the economy and society.</p>
                         
@@ -40,7 +40,7 @@
                         <h3>Messages</h3>
                         <h1 id="chairs-message">Chair’s Message</h1>
                         
-                        <div class="col messages">
+                        <div class="col">
                             
                             <p> Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property (IP) regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
                             
