keep backgrounds at the 600px breakpoint, adjust margins

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -144,10 +144,10 @@ hr {
   @include media-query($on-laptop) {
     max-width: calc(#{$content-width} - (#{$spacing-unit}));
     padding: 0;
+    padding-top: 2rem;
   }
   @include media-query($on-palm) {
     padding-bottom: 1rem;
-    
   }
 }
 
