--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -105,7 +105,8 @@ header {
 
 h1 {
   font-size: 1.75rem;
-  font-weight: 300;
+  font-weight: 400;
+  padding: 0.5rem 0;
   
   @include media-query($on-palm) {
     font-size: 1.25rem;
@@ -114,9 +115,11 @@ h1 {
     font-size: 2em;
   }
 }
-.timeline-slide h1{
+.timeline-slide main h1{
   font-size: 2.5rem;
+  font-weight: 300;
 }
+
 
 h2 {
   font-size: 1em;
@@ -149,6 +152,10 @@ hr {
   @include media-query($on-palm) {
     padding-bottom: 1rem;
   }
+}
+
+header.wrapper{
+  padding-top: 0;
 }
 
 .site-header {
