--- a/_assets/css/custom/timeline.scss
+++ b/_assets/css/custom/timeline.scss
@@ -539,6 +539,16 @@ $article-slide-timing-function: ease-in-out;
   background-color: $default-background-color;
 }
 
+.select-container input::placeholder{
+    color: $grey-color;
+}
+
+@media (max-width: $on-laptop) {
+  .f6{
+    font-size: 0.75rem;
+  }
+}
+
 .grey {
   color: $grey-color;
 }
