--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -268,6 +268,12 @@ p {
   }
 }
 
+.pb6-ns{
+  @include media-query($on-laptop){
+    padding-bottom: 5rem;
+  }
+}
+
 .joint-message{
   @include media-query($small-screen) {
     font-size: 13px;
