fixing lightbox sizing

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -281,6 +281,9 @@ p {
 .joint-message,
 .financials,
 .gallery-slide{
+  .wrapper{
+        padding-top: 6rem;
+      }
   
   h3 {
     display: none;
