--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -102,6 +102,19 @@
   @media (max-width: $on-laptop){
     width: calc(80% - 2rem);
   }
+  .responsive-media{
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 }
 
 
