--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -106,13 +106,13 @@
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
-  }
-  iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    iframe{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 
 }
@@ -121,7 +121,7 @@
 .close-button {
   align-items: center;
   background: #000;
-  border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem $grey-25;
   border-radius: 50%;
   color: #fff;
   display: flex;
@@ -136,7 +136,7 @@
 
 %gallery-button {
   background: #000;
-  border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem $grey-25;
   border-radius: 50%;
   color: #fff;
   height: 2.25rem;
@@ -144,7 +144,7 @@
   top: 45%;
   width: 2.25rem;
   @media(max-width: $small-phone){
-    top: 40%;
+    top: 45%;
   }
 }
 
