--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns standard-slide slide-10">
   
-  <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
+  <div class="background-img" style="background-image: url('assets/slides/AP_17228533339782-crop-optimized 2.jpg')"></div>
   
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
