--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -120,8 +120,8 @@
 
 .close-button {
   align-items: center;
-  background: #000;
-  box-shadow: 0 0 0.5rem $grey-25;
+  background: black;
+  box-shadow: 0 0 0.5rem rgba(255,255,255,0.9);
   border-radius: 50%;
   color: #fff;
   display: flex;
@@ -135,8 +135,8 @@
 }
 
 %gallery-button {
-  background: #000;
-  box-shadow: 0 0 0.5rem $grey-25;
+  background: black;
+  box-shadow: 0 0 0.5rem rgba(255,255,255,0.9);
   border-radius: 50%;
   color: #fff;
   height: 2.25rem;
@@ -150,26 +150,22 @@
 
 .gallery-left {
   @extend %gallery-button;
-
   left: 0;
   transform: translate(-50%, -50%);
-
-  .fa {
-    padding-bottom: 2px;
-    padding-right: 3px;
+  .fa{
+    padding-left: 35%;
   }
+
 }
 
 .gallery-right {
   @extend %gallery-button;
-
   right: 0;
   transform: translate(50%, -50%);
-
-  .fa {
-    padding-bottom: 2px;
-    padding-left: 3px;
+  .fa{
+    padding-left: 45%;
   }
+
 }
 
 .spinner {
