nov 24 text changes

--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -11,6 +11,11 @@
         
         <p>Bassem Awad, deputy director, intellectual property law and innovation, sees the venture as a potential model for raising IP awareness and delivering legal advice that could be applied in other countries.</p>
       
+        <div class="view-article pb2 pt2">
+            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/intellectual-property-proliferation-strategic-roots-and-strategic-responses"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Senior Fellow Dan Ciuriak’s paper on intellectual property in the knowledge-based economy.              
+            </a>
+          </div>
+
       <div class="lightbox-link">
           <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow E. Richard Gold address the “myth” of intellectual property.
           </div>
