--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -6,16 +6,16 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       
       <h3>Opinion</h3>
-      <h1>Modernizing NAFTA</h1>
+      <h1>Modernizing Trade and Investment Agreements</h1>
       <div class="mobile-img"><img src="assets/slides/nafta-pre.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
       
       <div class="photo-caption">NAFTA signing at the White House (Associated Press)</div>
       
       <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
       
-      <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in <em>Maclean's</em> and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone.</p>
+      <p>Senior Fellow Patrick Leblond’s first-out-of-the-gate research on modernizing NAFTA led to opinion editorials in <em>Maclean's</em> and <em>The Globe and Mail</em>, and was followed by a series of digital essays on what modernizing the trade accord will mean for the knowledge economy in Canada and the people who turn ideas into innovations within the free trade zone. At the same time, Senior Fellow Armand de Mestral’s work on investor-state arbitration — including the book <em>Second Thoughts</em>, which he edited — explored questions about dispute settlement under trade agreements.</p>
       
-      <p>This expansive offering of CIGI analysis, showcasing experts from across the organization’s programs, brought a Canadian perspective to the risks and benefits of reopening the agreement President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
+      <p>This expansive offering of CIGI analysis, showcasing experts from across the organization, brought perspective to the risks and benefits of updating trade agreements like NAFTA, which President Trump called “the worst trade deal maybe ever signed anywhere.”</p>
       
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017">
