--- a/_includes/slide13.html
+++ b/_includes/slide13.html
@@ -4,11 +4,11 @@
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
         <h3>Expertise</h3>
-        <h1>Blockchain: A Technology with Policy Implications</h1>
+        <h1>Blockchain: A Technology with Policy Potential</h1>
         <div class="mobile-img"><img src="assets/slides/Slide-Still-Blockchain-pre.jpg" alt="block background"></div>
-        <p>Senior Fellow Julie Maupin, an expert in blockchain and international economic law, chaired a CIGI round table on blockchain technology and climate change policy in June 2017. Technology, law and policy experts gathered in Toronto to discuss how distributed ledger technologies could provide solutions for tackling climate change under the Paris Agreement.</p>
+        <p>CIGI organized a round table chaired by Senior Fellow Julie Maupin, an expert in blockchain and international economic law, on blockchain technology and climate change policy in June 2017. Technology, law and policy experts gathered in Toronto to discuss how distributed ledger technologies could provide solutions for tackling climate change under the Paris Agreement.</p>
         <p>Previously, in March 2017, Maupin authored a policy brief on using blockchain and international law governance to solve global governance challenges. Her research demonstrates that the time has come for an open dialogue between the tech sector and lawmakers, many of whom find it difficult to understand the impact of the internet and the way we manage internet transactions. </p>
-        <p>CIGI’s expertise on blockchain led to an invitation to participate in the largest Ethereum hackathon to date with over 400 hackers in attendance, including Vitalik Buterin, the creator of the cryptocurrency Ethereum.</p>
+        <p>CIGI’s expertise on blockchain led to invitations to participate in the largest Ethereum hackathon to date with over 400 hackers in attendance and a hackathon at COP23 in Bonn that brought blockchain solutions to the attention of climate negotiators.</p>
         
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the policy brief on building an inclusive, transparent and accountable digital economy.</a>
