--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -9,13 +9,20 @@
         <div class="mobile-img"><img src="assets/slides/low-carbon-economy-pre.jpg" alt="looking up at trees"></div>
         
         <p>New research from Senior Fellow Céline Bak focused on low-carbon economic policies in the run-up to the 2017 Think 20 (T20) and Group of Twenty (G20) meetings in Germany. As co-chair of the T20 Task Force on Climate Policy and Finance, her group’s recommendations drove discussions among leaders looking for global solutions to foster a low-carbon economy.</p>
-        <p><em>Generating Growth from Innovation for the Low-carbon Economy: Exploring Safeguards in Finance and Regulation</em> looks at ways to build on momentum created by the Paris Agreement on climate change to double investments in energy innovation by 2020.</p>
+        <p><em>Generating Growth from Innovation for the Low-carbon Economy: Exploring Safeguards in Finance and Regulation</em> looks at ways to build on momentum created by the Paris Agreement on climate change to double investments in energy innovation by 2020. International law research also contributed by analyzing the role of geoengineering and border carbon adjustments.</p>
          
         <p>Bak subsequently presented her research to Canada’s Parliamentary Standing Committee on Natural Resources, incorporated the theme of the brief in a joint letter from T20 groups opposing the US withdrawal from the Paris Agreement, hosted a meeting with public and private sector leaders to consider a road map toward green finance, and was a popular spokesperson on the G20’s approach to climate action.</p>
         
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Generating Growth from Innovation for the Low-carbon Economy</em>.</a>
+        <br>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/climate-engineering-under-paris-agreement-legal-and-policy-primer"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Neil Craik and Wil Burns’ cutting-edge research on the legal and governance implications of geoengineering solutions for greenhouse gas reductions.</a>
       </div>
+      <div class="lightbox-link">
+          <div class="youtube-lightbox pointer" data-videoid="O3Xt0rQFruQ">
+            <i class="fa fa-play" aria-hidden="true"></i>Watch the Taxing Carbon for a Greener Economy video about Post-doctoral Fellow Maria Panezi’s research on border carbon adjustments.                        
+          </div>
+        </div>
     </div>
   </div>
 </section>
