--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -1,15 +1,15 @@
 <section class="vh-100-ns standard-slide slide-10">
   
-  <div class="background-img" style="background-image: url('assets/slides/nafta.jpg')"></div>
+  <div class="background-img" style="background-image: url('assets/slides/web-2.jpg')"></div>
   
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       
       <h3>Opinion</h3>
       <h1>Modernizing Trade and Investment Agreements</h1>
-      <div class="mobile-img"><img src="assets/slides/nafta-pre.jpg" alt="Bill Clinton signing the Nafta Agreement"></div>
+      <div class="mobile-img"><img src="assets/slides/web-2.jpg" alt="Trilateral meeting in Ottawa to renegotiate NAFTA)"></div>
       
-      <div class="photo-caption">NAFTA signing at the White House (Associated Press)</div>
+      <div class="photo-caption">Trilateral meeting in Ottawa to renegotiate NAFTA (The Canadian Press)</div>
       
       <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
       
