--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -9,7 +9,7 @@
       <h1>Modernizing Trade and Investment Agreements</h1>
       <div class="mobile-img"><img src="assets/slides/web-2.jpg" alt="Trilateral meeting in Ottawa to renegotiate NAFTA)"></div>
       
-      <div class="photo-caption">Trilateral meeting in Ottawa to renegotiate NAFTA (The Canadian Press)</div>
+      <div class="photo-caption">Trilateral meeting in Ottawa to renegotiate NAFTA (The Associated Press via The Canadian Press)</div>
       
       <p>From the moment US President Donald Trump’s administration set in motion the renegotiation of the 25-year-old North American Free Trade Agreement (NAFTA), CIGI has been Canada’s leading resource for timely, expert analysis with over 700 media mentions.</p>
       
@@ -21,6 +21,11 @@
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017">
           <i class="fa fa-file-text-o" aria-hidden="true"></i>
           Read the NAFTA and the Knowledge Economy essays.
+        </a>
+        <br>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/second-thoughts-investor-state-arbitration-between-developed-democracies?source=ar2017">
+          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+          Read about the book <em>Second Thoughts: Investor-State Arbitration between Developed Democracies</em>.
         </a>
       </div>
       
