--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -12,7 +12,7 @@
         <p>Bassem Awad, deputy director, intellectual property law and innovation, sees the venture as a potential model for raising IP awareness and delivering legal advice that could be applied in other countries.</p>
       
         <div class="view-article pb2 pt2">
-            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/intellectual-property-proliferation-strategic-roots-and-strategic-responses"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Senior Fellow Dan Ciuriak’s paper on intellectual property in the knowledge-based economy.              
+            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/intellectual-property-proliferation-strategic-roots-and-strategic-responses?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Senior Fellow Dan Ciuriak’s paper on intellectual property in the knowledge-based economy.              
             </a>
           </div>
 
