--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -16,7 +16,7 @@
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Generating Growth from Innovation for the Low-carbon Economy</em>.</a>
         <br>
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/climate-engineering-under-paris-agreement-legal-and-policy-primer"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Neil Craik and Wil Burns’ cutting-edge research on the legal and governance implications of geoengineering solutions for greenhouse gas reductions.</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/climate-engineering-under-paris-agreement-legal-and-policy-primer?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read Neil Craik and Wil Burns’ cutting-edge research on the legal and governance implications of geoengineering solutions for greenhouse gas reductions.</a>
       </div>
       <div class="lightbox-link">
           <div class="youtube-lightbox pointer" data-videoid="O3Xt0rQFruQ">
