--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,20 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
+  <meta property="og:title" content="CIGI Annual Report 2017" />
+  <meta property="og:site_name" content="CIGI Annual Report 2017"/>
+  <meta property="og:url" content="https://staging.cigionline.org/interactives/2017annualreport" />
+  <meta property="og:locale" content="en_CA" />
+  <meta property="og:type" content="article" />
+  <meta property="og:description" content="" />
+  
+      <meta name="twitter:card" content="summary" />
+      <meta name="twitter:site" content="@CIGIOnline" />
+      <meta property="og:image" content="/assets/AR-landing-withlogo.jpg"/>
+      <meta property="og:image:secure_url" content="/assets/AR-landing-withlogo.jpg"/>
+      <meta property="og:image:width" content="550" />
+      <meta property="og:image:height" content="330" />
+
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
