update reference to image for og card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
   
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:site" content="@CIGIOnline" />
-      <meta property="og:image" content="/assets/AR-landing-withlogo.jpg"/>
+      <meta property="og:image" content="{{ "/assets/AR-landing-withlogo.jpg" | relative_url }}"/>
       <meta property="og:image:secure_url" content="/assets/AR-landing-withlogo.jpg"/>
       <meta property="og:image:width" content="550" />
       <meta property="og:image:height" content="330" />
