--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <meta property="og:site_name" content="CIGI Annual Report 2017"/>
   <meta property="og:url" content="https://staging.cigionline.org/interactives/2017annualreport" />
   <meta property="og:locale" content="en_CA" />
+  <meta property="fb:app_id" content="995454813805233" />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="" />
   
