--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,8 @@
   
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:site" content="@CIGIOnline" />
-      <meta property="og:image" content="{{ "/assets/AR-landing-withlogo.jpg" | relative_url }}"/>
-      <meta property="og:image:secure_url" content="/assets/AR-landing-withlogo.jpg"/>
+      <meta property="og:image" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
+      <meta property="og:image:secure_url" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
       <meta property="og:image:width" content="550" />
       <meta property="og:image:height" content="330" />
 
@@ -30,10 +30,9 @@
 
   {% css main %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" href="{{ "/assets/favicon.ico" | relative_url }}">
+  <link rel="icon" href="{{ '/assets/favicon.ico' | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
+  
   {% comment %}
   <script src="https://use.typekit.net/cab1mhe.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
