--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,14 +16,14 @@
   <meta property="og:locale" content="en_CA" />
   <meta property="fb:app_id" content="995454813805233" />
   <meta property="og:type" content="article" />
-  <meta property="og:description" content="" />
+  <meta property="og:description" content="Check out our interactive" />
   
-      <meta name="twitter:card" content="summary" />
-      <meta name="twitter:site" content="@CIGIOnline" />
-      <meta property="og:image" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
-      <meta property="og:image:secure_url" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
-      <meta property="og:image:width" content="550" />
-      <meta property="og:image:height" content="330" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@CIGIOnline" />
+  <meta property="og:image" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
+  <meta property="og:image:secure_url" content="{{ '/assets/AR-landing-withlogo.jpg' | relative_url }}"/>
+  <meta property="og:image:width" content="550" />
+  <meta property="og:image:height" content="330" />
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
