updating balance sheet

--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -47,7 +47,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Capital Assets</td>
+            <td>Property and Equipment</td>
             <td>59,479,918</td>
             <td>61,831,500</td>
         </tr>
